# bbp-coc

./: .gitignore  Cargo.toml  README.md  plugin.json
.github/workflows/: rust.yml
src/: lib.rs  ui.rs
src/assets/: index.tpl.html
src/ui/: index.html  mod.rs  package.json  pnpm-lock.yaml
