[package]
name = "bbp-coc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.3.0"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "EventTarget",
    "MouseEvent",
    "Node"
]}
js-sys = "0.3"